[Chromium] webkitImageSmoothingEnabled canvas property does not work on redraw https://bugs.webkit.org/show_bug.cgi?id=89018

Patch by Justin Novosad <junov@chromium.org> on 2012-06-14
Reviewed by Stephen White.

Source/WebCore:

Test: fast/canvas/canvas-imageSmoothingEnabled-repaint.html

When an accelerated canvas layer prepares its texture for the
compositor, it must send a notification to skia to invalidate texture
proprties that are cached by skia, since the compositor may modify them.
The use case this fixes is when a canvas to canvas copy is performed
with webkitImageSmoothingEnabled=false on the destination canvas.
The backing texture of the source canvas will be set to "nearest"
filtering by skia in order to perform the copy.  Then, the compositor
sets filtering back to "linear" when the source canvas is drawn.
Skia is designed to only update GL attributes when required, so errors
occur when the skia-side GL state cache is out of sync.

* platform/graphics/chromium/Canvas2DLayerBridge.cpp:
(WebCore::Canvas2DLayerBridge::prepareTexture):

Source/WebKit/chromium:

Rolling chromium DEPS to 141884

* DEPS:

LayoutTests:

New layout test that verifies that disabling image smoothing on a 2d
canvas continues to work after multiple paint cycles.

* fast/canvas/canvas-imageSmoothingEnabled-repaint-expected.txt: Added.
* fast/canvas/canvas-imageSmoothingEnabled-repaint.html: Added.
* fast/canvas/script-tests/canvas-imageSmoothingEnabled-repaint.js: Added.
(draw):
(testResult):
(TestControllerPaint):
(BrowserPaint):
(onLoadHandler):

Canonical link: https://commits.webkit.org/106961@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120344 268f45cc-cd09-0410-ab3c-d52691b4dbfc